--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icons/
+    - assets/icons/location_pin.png
+    - assets/icons/location_pin_red.png
     # - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
