added the ability to chaneg the beginning/destination of the path

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -39,6 +39,9 @@
 			<string>UIInterfaceOrientationLandscapeLeft</string>
 			<string>UIInterfaceOrientationLandscapeRight</string>
 		</array>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>Shows your location on the map and helps improve the map</string>
+		<key>NSLocationAlwaysUsageDescription</key>
 		<key>UIViewControllerBasedStatusBarAppearance</key>
 		<false/>
 	</dict>
